--- a/templates/contact/index.html
+++ b/templates/contact/index.html
@@ -6,7 +6,7 @@
 		<div class="container">
 			<div class="row no-gutters slider-text justify-content-center align-items-center">
 				<div class="col-md-8 ftco-animate">
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Contact</span>
+					<p class="breadcrumbs"><span class="mr-2"><a href="{% url 'portfolio:index' %}">Home</a></span> <span>Contact</span>
 					</p>
 					<h1 class="bread">Contact Us</h1>
 				</div>
