--- a/templates/portfolio/detail.html
+++ b/templates/portfolio/detail.html
@@ -6,7 +6,7 @@
 		<div class="container">
 			<div class="row no-gutters slider-text justify-content-center align-items-center">
 				<div class="col-md-8 ftco-animate">
-					<p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>price</span>
+					<p class="breadcrumbs"><span class="mr-2"><a href="#">Home</a></span> <span>price</span>
 					</p>
 
 					<h1 class="bread"> {{category}}</h1>
